[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "soundharvest"
version = "1.0.0"
description = "Extract audio files from YouTube, using yt-dlp."
authors = ["Minjoon Kim <mg7441081@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "*"
yt-dlp = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
streamlit = "*"
yt-dlp = "*"
